--- a/admin/templates/results.html
+++ b/admin/templates/results.html
@@ -21,39 +21,41 @@
             </div>
         </div>
         {% if user_buns %}
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Имя пользователя</th>
-                    <th>Булочка</th>
-                    <th>ID чата</th>
-                    <th>Количество</th>
-                    <th>Очки</th>
-                    <th>Действия</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for ub in user_buns %}
-                <tr>
-                    <td>{{ ub['id'] }}</td>
-                    <td>{{ ub['username'] }}</td>
-                    <td>{{ ub['bun'] }}</td>
-                    <td>{{ ub['chat_id'] }}</td>
-                    <td>
-                        <form method="post" action="{{ url_for('edit_user_bun', id=ub['id']) }}" class="d-inline">
-                            <input type="number" name="count" value="{{ ub['count'] }}" class="form-control d-inline" style="width: 100px;">
-                            <button type="submit" class="btn btn-warning btn-sm">Сохранить</button>
-                        </form>
-                    </td>
-                    <td>{{ ub['points'] }}</td>
-                    <td>
-                        <a href="{{ url_for('delete_user_bun', id=ub['id']) }}" class="btn btn-danger btn-sm">Удалить</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Имя пользователя</th>
+                        <th>Булочка</th>
+                        <th>ID чата</th>
+                        <th>Количество</th>
+                        <th>Очки</th>
+                        <th>Действия</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for ub in user_buns %}
+                    <tr>
+                        <td>{{ ub['id'] }}</td>
+                        <td>{{ ub['username'] }}</td>
+                        <td>{{ ub['bun'] }}</td>
+                        <td>{{ ub['chat_id'] }}</td>
+                        <td>
+                            <form method="post" action="{{ url_for('edit_user_bun', id=ub['id']) }}" class="d-inline">
+                                <input type="number" name="count" value="{{ ub['count'] }}" class="form-control d-inline" style="width: 100px;">
+                                <button type="submit" class="btn btn-warning btn-sm">Сохранить</button>
+                            </form>
+                        </td>
+                        <td>{{ ub['points'] }}</td>
+                        <td>
+                            <a href="{{ url_for('delete_user_bun', id=ub['id']) }}" class="btn btn-danger btn-sm">Удалить</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
         {% if total_pages > 1 %}
         <nav aria-label="Пагинация результатов">
             <ul class="pagination justify-content-center">
