--- a/admin/templates/users.html
+++ b/admin/templates/users.html
@@ -21,34 +21,36 @@
             </div>
         </div>
         {% if users %}
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Telegram ID</th>
-                    <th>Имя пользователя</th>
-                    <th>Полное имя</th>
-                    <th>ID чата</th>
-                    <th>В игре</th>
-                    <th>Действия</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in users %}
-                <tr>
-                    <td>{{ user['id'] }}</td>
-                    <td>{{ user['telegram_id'] }}</td>
-                    <td>{{ user['username'] }}</td>
-                    <td>{{ user['full_name'] }}</td>
-                    <td>{{ user['chat_id'] }}</td>
-                    <td>{{ 'Да' if user['in_game'] else 'Нет' }}</td>
-                    <td>
-                        <a href="{{ url_for('delete_user', telegram_id=user['telegram_id'], chat_id=user['chat_id']) }}" class="btn btn-danger btn-sm">Удалить</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Telegram ID</th>
+                        <th>Имя пользователя</th>
+                        <th>Полное имя</th>
+                        <th>ID чата</th>
+                        <th>В игре</th>
+                        <th>Действия</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for user in users %}
+                    <tr>
+                        <td>{{ user['id'] }}</td>
+                        <td>{{ user['telegram_id'] }}</td>
+                        <td>{{ user['username'] }}</td>
+                        <td>{{ user['full_name'] }}</td>
+                        <td>{{ user['chat_id'] }}</td>
+                        <td>{{ 'Да' if user['in_game'] else 'Нет' }}</td>
+                        <td>
+                            <a href="{{ url_for('delete_user', telegram_id=user['telegram_id'], chat_id=user['chat_id']) }}" class="btn btn-danger btn-sm">Удалить</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
         {% if total_pages > 1 %}
         <nav aria-label="Пагинация пользователей">
             <ul class="pagination justify-content-center">
