--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -212,6 +212,12 @@
                             <i class="bi bi-star-fill me-1"></i> Начисление очков
                         </a>
                     </li>
+<!--                    <li class="nav-item">-->
+<!--                      <a href="{{ url_for('admin.events') }}" class="nav-link">-->
+<!--                        <i class="nav-icon fas fa-calendar"></i>-->
+<!--                        <p>События</p>-->
+<!--                      </a>-->
+<!--                    </li>-->
                 </ul>
             </nav>
         </div>
